Correct card score spacing

--- a/src/css/Card.css
+++ b/src/css/Card.css
@@ -39,3 +39,7 @@
 .score-wrapper p img {
   width: 10px;
 }
+
+.score-container {
+  margin-top: 1rem;
+}
